// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Workflow > allows a job matrix 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Conditional job
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    strategy:
      fail-fast: false
      matrix:
        food:
          - 🍕
          - 🍔
        topping:
          - 🍍
        include:
          - food: 🍕
            topping: 🍍
            tasty: true
    steps:
      - run: echo \${{ matrix.food }} with \${{ matrix.topping }}
"
`;

exports[`Workflow > allows concurrency groups at workflow level 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Concurrency at workflow level
on:
  push: null
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > allows conditional jobs 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Conditional job
on:
  push: null
jobs:
  job1:
    if: \${{ github.ref != 'refs/heads/main' }}
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - run: exit 0
"
`;

exports[`Workflow > allows creating jobs with concurrency set to null 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Without concurrency
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > allows creating jobs with no steps, uses and secrets 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Uses job
on:
  push: null
jobs:
  job1:
    uses: example/example/.github/workflows/example1.yml@main
    with:
      foo: foo
    secrets: inherit
  job2:
    uses: example/example/.github/workflows/example2.yml@main
    with:
      bar: bar
    secrets:
      secret: super-secret
"
`;

exports[`Workflow > allows custom types in a workflow 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: With custom types
on:
  push: null
jobs:
  job1:
    runs-on:
      - self-hosted
      - standard-runner
    timeout-minutes: 15
    steps:
      - run: echo 'Do something'
      - uses: custom-action
        with:
          foo: bar
"
`;

exports[`Workflow > allows declaring default options 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Default options
on:
  push:
    branches:
      - main
defaults:
  run:
    working-directory: frontend
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > allows declaring environment variables 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: With Environment variables
on:
  push: null
env:
  NODE_VERSION: '16'
  ENABLED: 'true'
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: echo \${{ env.NODE_VERSION }} && echo \${{ env.ENABLED }}
"
`;

exports[`Workflow > allows multiline strings 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Multiline strings
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: |-
          echo foo
          exit 0
"
`;

exports[`Workflow > allows multiple events 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Multiple events
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > allows permissions into jobs 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Job with permissions
on:
  push: null
jobs:
  job1:
    permissions:
      contents: read
      pull-requests: write
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > allows uses steps 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Uses steps
on:
  push: null
env:
  NODE_VERSION: '16'
  ENABLED: 'true'
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v3
        with:
          ref: main
"
`;

exports[`Workflow > allows using a concurrency group 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Concurrency group
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    concurrency:
      group: concurrency-group-job1-foo
      cancel-in-progress: true
    steps:
      - run: echo 0
"
`;

exports[`Workflow > allows using outputs 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Using outputs
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - id: random-number
        run: echo \\"::set-output name=random-number::$RANDOM\\"
    outputs:
      random-number: \${{ steps.random-number.outputs.random-number }}
"
`;

exports[`Workflow > generates a simple workflow 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Simple
on:
  pull_request:
    types:
      - opened
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
  job2:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    needs:
      - job1
    steps:
      - name: Do something else
        run: exit 0
"
`;

exports[`Workflow > support workflow dispatch event 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Workflow dispatch
on:
  workflow_dispatch:
    inputs:
      foo:
        description: A foo input
        required: true
      bar:
        description: A bar input
        type: choice
        options:
          - bar
          - baz
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > supports a pretty name for the job 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Job with pretty name
on:
  push: null
jobs:
  job1:
    name: My pretty name
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > supports schedule event 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Schedule
on:
  schedule:
    - cron: 0 4 * * 1-5
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        run: exit 0
"
`;

exports[`Workflow > supports supply chain attack, with writing the lock file 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Supply chain attack
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        uses: tj-actions/changed-files@a284dc1814e3fd07f2e34267fc8f81227ed29fb8
"
`;

exports[`Workflow > supports supply chain attack, without writing the lock file 1`] = `
"# Workflow automatically generated by gat
# DO NOT CHANGE THIS FILE MANUALLY

name: Supply chain attack
on:
  push: null
jobs:
  job1:
    runs-on: ubuntu-22.04
    timeout-minutes: 15
    steps:
      - name: Do something
        uses: tj-actions/changed-files@youhavebeenhacked
"
`;
